--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:adminadmin@localhost/final_course
+sqlalchemy.url = postgresql://postgres:adminadmin@localhost/final-course
 
 
 [post_write_hooks]
