--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ GITHUB_CLIENT_ID = Ov23li2iAPFAz28aauo1
 GITHUB_KEY = b01729068bc06f1680579bbfd729ab268f63fe92
 GITHUB_URL=http://127.0.0.1:8000/github/login/callback
 
+GOOGLE_CLIENT_ID = 748963168059-2u4vc6cqopjb4sh3plmf68gc1bou8p23.apps.googleusercontent.com
+GOOGLE_KEY=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
+GOOGLE_URL=http://127.0.0.1:8000/ru/accounts/google/login/callback/
